--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -257,6 +257,7 @@
     max-height: 100%;
     object-fit: cover;
     display: block;
+    cursor: pointer;
 }
 
 .shop .products-wrapper .products .product .photo .top-bar {
@@ -329,7 +330,7 @@
     width: 22px;
 }
 
-.wrapper {
+.container .wrapper {
     background-color: rgba(241, 242, 243, 1);
     max-width:1680px;
     width: 100%;
@@ -338,7 +339,7 @@
     margin: 200px auto 120px auto;
 }
 
-.wrapper .newsletter {
+.container .wrapper .newsletter {
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -350,24 +351,24 @@
     position: relative;
 }
 
-.wrapper .newsletter .info {
+.container .wrapper .newsletter .info {
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
 
-.wrapper .newsletter .info .title {
+.container .wrapper .newsletter .info .title {
     font-family: Josefin Sans;
     font-size: 32px;
     line-height: 39px;
 }
 
-.wrapper .newsletter .info .description {
+.container .wrapper .newsletter .info .description {
     font-size: 14px;
     line-height: 24px;
 }
 
-.wrapper .newsletter .entry-field {
+.container .wrapper .newsletter .entry-field {
     display: flex;
     gap: 30px;
     max-width: 500px;
@@ -375,17 +376,17 @@
     
 }
 
-.wrapper .newsletter .entry-field .button-wrapper {
+.container .wrapper .newsletter .entry-field .button-wrapper {
     justify-content: flex-end;
 }
 
-.wrapper .newsletter .entry-field .button-wrapper .button {
+.container .wrapper .newsletter .entry-field .button-wrapper .button {
     max-width: 136px;
     width: 100%;
     padding: 17px 30px 17px 30px;
 }
 
-.wrapper .newsletter .container-points {
+.container .wrapper .newsletter .container-points {
     position: absolute;
     top: -30px;
     left: 460px;
