--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -125,7 +125,7 @@
     justify-content: space-between;
     gap: 15px;
     border-top: 1px solid  rgba(68, 68, 68, 20%);
-    padding-top: 23px;
+    padding: 23px 0;
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
